feat: Add core functionality for AI ebook generation
Introduces new dependencies and core components to support the AI-driven ebook creation process. This includes:

- **Enhanced PDF and document handling:** Added libraries for processing Word documents, PDFs, and generating PDFs/DOCX.
- **Mermaid diagram support:** Integrated Mermaid for generating diagrams from markdown.
- **Expanded `types.ts`:** Introduced new types for training courses, lessons, quizzes, and admin phases, as well as fields for language, chapter count, and source material in briefing data.
- **Updated `constants.ts`:** Enhanced system instructions for better AI output, including support for emojis, checklists, and tables. Added default logo URL and updated initial briefing values.
- **Gemini Service improvements:** Updated Gemini client to support multimodal inputs and added a helper for converting PCM audio data to WAV format.
- **Layout component update:** Imports necessary Tailwind CSS configuration.

These changes lay the groundwork for advanced features such as multimodal content generation, structured training course creation, and improved document export options.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
   <head>
@@ -5,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-book Pro Architect</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script src="https://unpkg.com/html-docx-js/dist/html-docx.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@11.12.2/dist/mermaid.min.js"></script>
+    <!-- PDFMake for robust PDF generation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.9/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.9/vfs_fonts.js"></script>
+    <!-- HTML2Canvas for exporting ToC as Image -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script>
+      // Configure PDF.js worker
+      window.onload = function() {
+        if (window.pdfjsLib) {
+          window.pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+        }
+      }
+    </script>
     <script>
       tailwind.config = {
         theme: {
@@ -63,7 +82,9 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
+    "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.1",
+    "mermaid": "https://aistudiocdn.com/mermaid@^11.12.2"
   }
 }
 </script>
