feat(briefing): Enhance briefing and add category selection
Introduces a new category selection field to the briefing phase, allowing users to categorize their ebooks. Updates the briefing data structure to include category and context images. Adds functionality for parsing PDF and text files for context material, and for uploading context images. Also includes initial integration for suggesting briefing fields via AI.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
   <head>
@@ -16,6 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.9/vfs_fonts.js"></script>
     <!-- HTML2Canvas for exporting ToC as Image -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <!-- JSZip for audio bundling -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script>
       // Configure PDF.js worker
       window.onload = function() {
